# iac-para-kubernetes

./: .gitignore  404.html  README.md  index.html
ansible/: ansible.cfg  k8s-containerd-playbook.yaml
ansible/ansible/: index.html
ansible/inventory/: cloud.yaml  main.yaml  rasp.yaml
ansible/playbooks/cloud/: ansible.cfg  k8s-containerd-playbook.yaml
ansible/playbooks/rasp/: ansible.cfg  k8s-containerd-playbook.yaml
ansible/roles/commons/tasks/: main.yaml
ansible/roles/config_nodes/tasks/: main.yaml
ansible/roles/containerd/tasks/: main.yaml
ansible/roles/control_plane/tasks/: main.yaml
ansible/roles/installs_kubectl/tasks/: main.yaml
ansible/roles/kubernetes/tasks/: main.yaml
ansible/roles/terraform/tasks/: main.yaml
ansible/roles/terraform/templates/: cloud.yaml.j2
ansible/roles/terraform/vars/: main.yaml
ansible/vars/: main.yaml
docs/: mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/docs/ansible/: ansible.md
docs/docs/documentacao_env/: documentacao_env.md
docs/docs/provisionamento/: ansible.md  terraform.md
docs/docs/seguranca/: chaves_ssh.md
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
documentacao_env/documentacao_env/: index.html
kubernetes/testes_cert_manager/: passos.md
provisionamento/ansible/: index.html
provisionamento/terraform/: index.html
search/: search_index.json
seguranca/chaves_ssh/: index.html
terraform/aws/: .terraform.lock.hcl  output.tf  terrafile.tf  variables.tf
terraform/aws/modules/instancias_k8s/: ec2.tf  outputs.tf  variables.tf
(+8 files in other folders)
