[tool.poetry]
name = "iac-para-kubernetes-doc"
version = "0.1.0"
description = ""
authors = ["VitoUtopico <fabiovito@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.3.1"
mkdocs-material = "^9.4.7"
pygments = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
